samples/d.fenek
fun a(mut n: i8) -> mut *i8 {
  // error
  ret &n;
}

fun main() -> i8 {
  let n2 = a(20);
  ret *n2;
}
